Simplify layout selection code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,11 @@
 name: layout_demo_flutter
 description: A new Flutter project.
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.2.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
